syntax = "proto3";
package rating;

option go_package = "Airlines-booking-gRPC-Protobuf/genfiles/rating";

message RatingRequest {
    string flightId = 1;
    int32 rating =2;
}

message RatingResponse {
    string flightId = 1;
<<<<<<< HEAD
    int32 count = 2;
    double avg_rating = 3;
=======
    string quality = 2;
    //int32 count = 2;
    //double avg_rating = 3;
>>>>>>> 12789278e52d68c3cf67d545dd91f491e6ceca0f
}


service RatingService {
    rpc RateFlights(stream RatingRequest) returns (stream RatingResponse) {};
}

